- fixed test execution