@@ -64,7 +64,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.16</version>
 				<configuration>
-					<argLine>-Xmx1124m -Xms256m</argLine>
+					<argLine>-Xmx1124m -Xms256m -XX:MaxPermSize=512m</argLine>
 					<systemPropertyVariables>
 						<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
 						<arquillian.launch>jboss-wildfly</arquillian.launch>
